--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  bloc: ^7.0.0
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.3
+  flutter_bloc: ^7.0.1
   http: ^0.13.3
 
 dev_dependencies:
